# cpp_gui_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Game.cpp  Game.h  main.cpp
